CHANGELOG
=========

#### [2.1.0] ####
 * [79b48f8] po files update prior to 2.1 release                                           (Daniel Henrique Barboza)
 * [ab717b7] Fixing i18n.py and ui/pages/i18n.json.tmpl messages                            (Daniel Henrique Barboza)
 * [130e5c2] Fixed Issue #233 error message appears in closeable format                     (Rajat Gupta)
 * [2582b41] Issue # 230 and #231.                                                          (Megha Smriti)
 * [c09657e] Issue # 232 : In Storage tab the bottom lines are miss-aligned on each secti.. (Atreyee Mukhopadhyay)
 * [53575df] Fixed issues in VLAN and BOND creation                                         (Jayavardhan Katta)
 * [2b875a6] Fix for issue #215                                                             (Suresh Babu Angadi)
 * [ca9f1d8] Issue #102 Create partition fails with 500                                     (Harshal Patil)
 * [200898e] Issue #133 Delete physical volume fails with 500 status code                   (Pooja Kulkarni)
 * [618f7c1] Ginger Issue #113: Delete operation for /dasdpartitions fails with 500         (Pawan Kumar)
 * [539092c] Issue #140 : Create swap file fails                                            (Harshal Patil)
 * [fc38b7d] Improve user request log messages                                              (Lucio Correia)
 * [2ceb7b2] OVS backend: Avoid error message in WoK start                                  (Daniel Henrique Barboza)
 * [4bd5862] Issue #223: list isn't refreshing after unload                                 (Samuel Guimarães)
 * [873dec7] Issue #225 Storage devices listing API timesout if large number of FC device.. (Pooja Kulkarni)

#### [2.1.0-rc1] ####
 * [bd4ef81] Fix Ginger UI: SEP container is hidden after start service                     (Rodrigo Trujillo)
 * [cdd9b9e] Updated Ginger SCSS to import new Wok accordion mixin                          (Samuel Guimarães)